--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,9 @@ $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
 
 
+$color-grey-dark: #777;
+$color-white: #fff;
+
 
 
 *,
@@ -23,7 +26,7 @@ body {
     font-weight: 400;
     /* font-size: 16px; */
     line-height: 1.7;
-    color: #777;
+    color: $color-grey-dark;
     padding: 3rem;
     box-sizing: border-box;
 }
@@ -51,7 +54,7 @@ body {
     text-align: center;
 }
 .heading-primary {
-    color: #fff;
+    color: $color-white;
     text-transform: uppercase;
     backface-visibility: hidden;
     margin-bottom: 6rem;
@@ -131,8 +134,8 @@ body {
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.4);
 }
 .btn--white {
-    background-color: #fff;
-    color: #777;
+    background-color: $color-white;
+    color: $color-grey-dark;
 
 }
 .btn::after {
@@ -148,7 +151,7 @@ body {
     transition: all .2s;
 }
 .btn--white::after {
-    background-color: #fff;
+    background-color: $color-white;
 }
 .btn:hover::after {
     transform: scaleX(1.4) scaleY(1.6);
